--- a/contato.css
+++ b/contato.css
@@ -3,77 +3,81 @@ body {
     margin-left: 0px;
 }
 
-form {
-    background-color: none;    
-    margin: 30px auto;  
-    padding: 70px; /*preenchimento da caixa */  
-    max-width: 730px;
-    line-height: 30px; 
-      
- 
-}
-
 section .name-section{
-    font-family: 'Roboto';
-    font-size: 50px;
-    font-weight: 700; /* AQUIIIIIIIII*/ 
+    margin-top: 80px;
+    font-family: 'Roboto', black;
+    font-size: 40px;
     text-align: center;
     color: #111A21;
     line-height: 0px;
     
+    
 }
 
 section .description{
-    font-family: 'Roboto';
+    margin-top: -10px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
     text-align: center;
     font-weight: 0;
     color: #111A21;
     
 }
 
+form {
+    background-color: none;    
+    margin: 20px auto;  
+    max-width: 730px;
+    line-height: 70px; 
+}
 
-form input,
-form textarea {
+
+
+
+form input {
     background-color:none;
 
     width: 100%;
     line-height: 30px;
-    border: 0px; 
+    border: 2px; 
     background: #f2f2f2;
-    padding: 14px 20px;
+    padding: 15px 30px;
     font-size:16px;
     outline: none;
     border-radius: 4px;
+    
+}
+
+form .mensage input{
+    padding: 120px 30px;
+    margin-top: -20px;
+   
+
 }
 
 form label{
-    font-size: 14px;
-    margin-bottom: 10px;
+  
+    font-family: 'Roboto Regular', sans-serif;
+    font-size: 20px;
     color:#111A21;
-}
-
-form textarea{
-    padding: 25px;
-    height: 90px
+    
 }
 
 
 form button{
-    width: 300px;
-    height: 50px;
+    margin-top: 40px;
+    margin: 50px auto; 
+    width: 330px;
+    height: 70px;
     background-color: #111A21;
-    border-radius: 8px;
+    border-radius: 4px;
 
     color:white;
     font-weight: normal;
-    font-size: 20px ;
+    font-size: 25px ;
     font-family: 'Roboto';
-
-  
     
     border:0;
 
-    margin-top: 40px;
-
-    
 }
+
