--- a/equipe.css
+++ b/equipe.css
@@ -1,179 +1,72 @@
 *{
-    margin: 0px;
     padding: 0px;
+    margin: 0px;
+    letter-spacing: 0px;
 }
-/* ------------------------------------------------ EQUIPE --------------------------------------------------------------- */
 
+.team{
+    display: flex; 
+    flex-direction: column;
+    margin: auto;
+    width: 90vw;
+}
 .equipe h2{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 30px;
-    margin-top: 50px;
+    margin-top: 80px;
+    font-family: 'Roboto', black;
+    font-size: 40px;
+    text-align: center;
+    color: #111A21;
+    line-height: 0px;
+    text-transform: uppercase;
 }
 
-.equipe h3{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, regular;
-    font-size: 13px;
-    font-weight: normal;
-    font-style: inherit;
-}
-
-.pessoa01 img{
-    height: 150px; 
-    width: 150px;
-    border-radius: 50%;  
-}
-
-.pessoa01 h1{
-    font-family: 'Segoe UI';
-    font-size: 18px;
-}
-
-.pessoa01 h2{    
-    font-weight: normal;
-    font-family: 'Segoe UI';
-    font-size: 16px;
-    
-}
-
-.pessoa01{
-    display: grid;
-    margin-left: 300px
-}
-
-
-.pessoa02 img{
-    height: 150px; 
-    width: 150px;
-    border-radius: 50%
-}
-
-.pessoa02 h1{
-    font-family: 'Segoe UI';
-    font-size: 18px;
-    
-}
-
-.pessoa02 h2{    
-    font-weight: normal;
-    font-family: 'Segoe UI';
-    font-size: 16px;
-}
-
-.pessoa02{
-    display: grid;
-    margin-top: -150px;
-}
-
-
-
-.pessoa03 img{
-    height: 150px; 
-    width: 150px;
-    border-radius: 50%;
-}
-
-.pessoa03 h1{
-    font-family: 'Segoe UI';
-    font-size: 18px;
-    
-}
-
-.pessoa03 h2{    
-    font-weight: normal;
-    font-family: 'Segoe UI';
-    font-size: 16px;
-}
-
-.pessoa03{
-    display: grid;
-    margin-left: 900px;
-    margin-top: -198px;
-}
-
-
-
-.pessoa04 img{
-    height: 150px; 
-    width: 150px;
-    border-radius: 50%;
-}
-
-.pessoa04 h1{
-    font-family: 'Segoe UI';
-    font-size: 18px;
-    
-}
-
-.pessoa04 h2{    
-    font-weight: normal;
-    font-family: 'Segoe UI';
-    font-size: 16px;
-}
-
-.pessoa04{
-    display: grid;
-    margin-left: 300px;
-}
-
-
-
-.pessoa05 img{
-    height: 150px; 
-    width: 150px;
-    border-radius: 50%;
-}
-
-.pessoa05 h1{
-    font-family: 'Segoe UI';
+.equipe p{
+    text-transform: uppercase;
+    margin-top: 30px;
+    font-family: 'Roboto', sans-serif;
     font-size: 18px;
     text-align: center;
-    
+    font-weight: 0;
+    color: #111A21;
+    margin-bottom: 60px;
+}
+.team .card{
+    display: flex; 
+    flex-direction: column;
+    width: 350px;
 }
 
-.pessoa05 h2{    
-    font-weight: normal;
-    font-family: 'Segoe UI';
-    font-size: 16px
+.team .card div{
+    width: 90vw;
+    display: flex; 
+    flex-direction: row;
 }
 
-.pessoa05{
-    display: grid;
-    margin-top: -150px;
+.team .card .persona{
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
 }
-
-
-
-.pessoa06 img{
-    height: 150px; 
-    width: 150px;
+.team .card img, .team .card-2 img{
     border-radius: 50%;
+    width: 250px;
+    height: 250px;  
 }
 
-.pessoa06 h1{
+.team .card .name, .team .card-2 .name{
+    padding-top: 10px;
+    text-align: center;    
     font-family: 'Segoe UI';
+    width: 100%;
     font-size: 18px;
-    
 }
 
-.pessoa06 h2{    
+.team .card .charge, .team .card-2 .charge{
+    text-align: center; 
     font-weight: normal;
     font-family: 'Segoe UI';
     font-size: 16px;
+    width: 100%;
+    height: 10vh;
 }
-
-.pessoa06{
-    display: grid;
-    margin-left: 900px;
-}
-
-.pessoa06{
-    display: grid;
-    margin-left: 900px;
-    margin-top: -198px;
-}
-
-
-
-
-
 
