--- a/CSS/768x850/origin.css
+++ b/CSS/768x850/origin.css
@@ -55,6 +55,12 @@
         background: #A9081C;
         grid-template-rows: 25% 70%;
     }
+    header .menu a{
+        margin-left: 0px;
+    }
+    header .menu h2{
+        align-self: start;
+    }
     .main{
         margin-top: 60px;
     }
@@ -63,14 +69,66 @@
         display: none;
     }
     /* mostrando o menu hamburguer */
-    header .dropdown {
-        display: grid;
+    header .container {
+        display: flex;
     }
     /* equipe */
     .team .card img,
     .team .card-2 img{
         width: 180px;
         height: 180px;  
+    }
+    /* sobre nós */
+    .layout{
+        margin-top: 50px;
+        width: 100%;
+        display: inline-flex; 
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 50px;
+    }
+    .texto {
+        margin-right: 2vw;
+        width: 80%;
+        height: 100%;
+        font-family: 'Roboto';  
+        font-size: 20px;
+        letter-spacing: 1px;
+        line-height: 30px;
+        text-align: center;
+    }
+    .image-pessoas img {
+        width: 70vw;
+    }
+    /* serviços */
+    .service .card{ 
+        display: inline-flex;
+        flex-direction: column;
+        width: 50vw;
+        height: 40vh;
+        background-color:#fff;
+        box-shadow: -1px 9px 9px rgb(0, 0, 0, 0.25);
+        margin: 20px;
+        margin-top: 50px;
+        margin-bottom: 30px;
+        border:solid 0.5px rgb(80, 80, 80, 0.1);
+    }
+    
+    .service .card .subtitle{
+        width: 100%;
+        height: 20%;
+        font-size: 30px;
+        font-weight: bold;
+        text-align: center;
+    }
+    
+    .service .card .info{
+        padding-top: 20px;
+        width: 60%;
+        font-size: 18px;
+        align-self: center;
+        font-weight: 500; 
     }
     /* contato */
     .contact {       
@@ -94,5 +152,9 @@
         width: 100%;
         height: 40vh;
         align-items: center;    
+    }
+    footer .rodape div{
+        width: 20vw;
+        height: 50%;
     }
 }
