--- a/CSS/origin.css
+++ b/CSS/origin.css
@@ -169,7 +169,7 @@ header .logo a {
 label[for="checkbox-menu"] {
     cursor: pointer;
     position: absolute;
-    top: 0;
+    top: 14px;
     right: 0;
     display: block;
     height: 22px;
@@ -215,7 +215,7 @@ label[for="checkbox-menu"] span:nth-child(3) {
 .dropdown-child {
     display: none;
     background-color: black;
-    margin-top: 30px;
+    margin-top: 44px;
     align-items: center;
     border-radius: 10px;
     width: 20vw;
