--- a/CSS/360x640/responsive.css
+++ b/CSS/360x640/responsive.css
@@ -14,20 +14,17 @@
     }
 
     header .main button {
-
         width: 100px;
         height: 30px;
         font-size: 12px;
     }
 
     header div .button {
-
         width: 100%;
     }
 
     .principal {
         flex-direction: column-reverse;
-
     }
 
     .main {
@@ -63,6 +60,7 @@
     /* mostrando o menu hamburguer */
     header .container {
         display: flex;
+        margin-left: auto;
     }
 
     .dropdown-child {
@@ -80,16 +78,13 @@
     }
 
     .texto {
-
         width: 70%;
         height: 90%;
-
         font-size: 13px;
     }
 
     /*------------------------------------------------------------serviços------------------------------------------------------*/
     .service .card {
-
 
         width: 62vw;
         height: 38vh;
@@ -98,7 +93,7 @@
 
     .service .card .subtitle {
         width: 100%;
-        height: 40%;
+        height: 15%;
         font-size: 20px;
         font-weight: bold;
         text-align: center;
@@ -106,7 +101,6 @@
     }
 
     .service .card .info {
-        padding-top: 20px;
         width: 70%;
         font-size: 14px;
         align-self: center;
@@ -146,15 +140,12 @@
 
     .team .card .charge,
     .team .card-2 .charge {
-
         font-size: 10px;
-
     }
 
     /*---------------------------------------------------------Contato-------------------------------*/
     section .name-section {
         font-size: 30px;
-
     }
 
     section .description {
@@ -183,7 +174,6 @@
 
     .rodape .name {
         font-size: 25px;
-
     }
 
     .rodape .copy {
@@ -193,12 +183,9 @@
 
     .rodape li {
         font-size: 10px;
-
-
     }
 
     .rodape address {
-
         font-size: 10px;
     }
 }
