--- a/CSS/origin.css
+++ b/CSS/origin.css
@@ -112,6 +112,7 @@ header .main button{
     margin-top: 50px;
     color: #fff;
     cursor: pointer;
+    text-transform: uppercase;
 }
 
 
@@ -359,12 +360,6 @@ input[type=checkbox]:checked~#myDropdown {
 
 /*------------------------------------------Equipe-----------------------------------------------------*/
 
-/*.team{
-    display: flex; 
-    flex-direction: column;
-    margin: auto;
-    width: 90vw;
-}*/
 .equipe h2{
     margin-top: 80px;
     font-family: 'Roboto', sans-serif;
@@ -394,12 +389,6 @@ input[type=checkbox]:checked~#myDropdown {
     max-width: 60vw;
 	margin: 0 auto;
 }
-
-/*.team .card div{
-    width: 90vw;
-    display: flex; 
-    flex-direction: row;
-}*/
 
 .team .card .persona{
     display: flex; 
