--- a/CSS/360x640/responsive.css
+++ b/CSS/360x640/responsive.css
@@ -1,4 +1,5 @@
 @media screen and (max-width: 360px) and (max-height: 640px) {
+    /* header */
     header .main h1 {
         width: 100%;
         font-size: 4em;
@@ -7,10 +8,8 @@
 
     header .main h2 {
         width: 100%;
-        text-transform: uppercase;
         font-size: 0.7em;
         letter-spacing: .2rem;
-        color: #fff;
     }
 
     header .main button {
@@ -32,7 +31,6 @@
         justify-content: center;
     }
 
-
     header .logo img {
         height: 20px;
         width: 20px;
@@ -43,16 +41,13 @@
         flex-direction: row;
         justify-content: space-around;
         align-items: center;
-
-
         align-self: center;
         justify-self: center;
         width: 50%;
         height: 100%;
     }
 
-    /*---------------------------------------------------sobre nos--------------------------------------------------------*/
-    /*escondendo o menu*/
+    /* escondendo o menu normal */
     header nav {
         display: none;
     }
@@ -63,10 +58,10 @@
         margin-left: auto;
     }
 
+    /*---------------------------------------------------sobre nos--------------------------------------------------------*/
     .dropdown-child {
         width: 30vw;
     }
-
 
     .titulo2 h2 {
         font-size: 30px;
@@ -85,10 +80,8 @@
 
     /*------------------------------------------------------------serviços------------------------------------------------------*/
     .service .card {
-
         width: 62vw;
         height: 38vh;
-
     }
 
     .service .card .subtitle {
@@ -119,27 +112,23 @@
     /*----------------------------Equipe----------------------------*/
     .equipe h2 {
         font-size: 30px;
-        padding-top: 20px;
     }
 
     .equipe p {
         font-size: 15px;
     }
 
-    .team .card img,
-    .team .card-2 img {
+    .team .card .persona img {
         width: 100px;
         height: 100px;
     }
 
-    .team .card .name,
-    .team .card-2 .name {
+    .team .card .name {
         padding-top: 5px;
         font-size: 14px;
     }
 
-    .team .card .charge,
-    .team .card-2 .charge {
+    .team .card .charge{
         font-size: 10px;
     }
 
@@ -164,7 +153,6 @@
     }
 
     /*-----------------------------Footer-------------------*/
-
     footer .rodape div {
         margin-left: 20px;
         margin-right: 20px;
