--- a/CSS/640x360/responsive.css
+++ b/CSS/640x360/responsive.css
@@ -1,5 +1,4 @@
 @media screen and (max-width: 640px) and (max-height: 360px) {
-
     /* pagina inicial */
     header .main h1 {
         font-size: 6em;
@@ -7,53 +6,24 @@
     }
 
     header .main h2 {
-        width: 90%;
-        text-transform: uppercase;
         font-size: 1em;
-        font-family: 'Roboto', sans-serif;
-        text-align: center;
-        letter-spacing: .2rem;
-        color: #fff;
         margin-top: 2px;
     }
 
     header .main button {
-        justify-self: center;
         width: 160px;
         height: 30px;
-        background: none;
-        border: 2px solid #fff;
         font-size: 15px;
-        font-family: 'Roboto';
         margin-top: 20px;
-        color: #fff;
-        cursor: pointer;
     }
 
     header div .button {
-        padding-bottom: 150px;
-        text-align: center;
         width: 85%;
     }
 
     header .logo {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
         margin-left: 0px;
-
-        align-self: start;
-        justify-self: start;
         width: 20%;
-        height: 100%;
-    }
-
-    header {
-        display: grid;
-        height: 100vh;
-        background: #A9081C;
-        grid-template-rows: 25% 70%;
     }
 
     header .menu a {
@@ -80,29 +50,24 @@
     }
 
     /* sobre nós */
-
-    .layout {
-        margin-top: 0px;
-        width: 100%;
-        display: inline-flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        margin-bottom: 50px;
-    }
     .titulo2 h2 {
         font-size: 30px;
-        margin-bottom: 20px;
     }
+
     .titulo2 p {
         margin-top: 0px;
         font-size: 14px;
-        margin-bottom: 15px;
+        margin-bottom: 0vh;
     }
+
+    .layout {
+        display: inline-flex;
+        flex-direction: column;
+    }
+
     .texto {
         width: 80%;
         height: 100%;
-        font-family: 'Roboto';
         font-size: 12px;
         letter-spacing: 0.5px;
         line-height: 25px;
@@ -114,59 +79,37 @@
     }
 
     /* serviços */
-    .service{
-        background-color: none;
-    }
     .service .name-section {
         font-size: 30px;
-        margin-bottom: 20px;
     }
 
     .service .description {
-        margin-top: 0px;
         font-size: 14px;
-        margin-bottom: 15px;
     }
 
     .service .card {
-        display: inline-flex;
-        flex-direction: column;
         width: 40vw;
         height: 60vh;
-        background-color: #fff;
-        box-shadow: -1px 9px 9px rgb(0, 0, 0, 0.25);
-        margin: 20px;
-        margin-top: 50px;
-        margin-bottom: 30px;
-        border: solid 0.5px rgb(80, 80, 80, 0.1);
     }
 
     .service .card .subtitle {
-        width: 100%;
         font-size: 20px;
-        font-weight: bold;
-        text-align: center;
         margin-top: 20px;
     }
 
     .service .card .info {
-        padding-top: 20px;
         width: 70%;
         font-size: 14px;
-        align-self: center;
-        font-weight: 500;
         margin-bottom: 20px;
     }
 
-    /* equipe */
-    
+    /* equipe */ 
     .team{
         padding-top: 10px;
     }
     .equipe h2 {
         height: 100%;
         font-size: 30px;
-        margin-bottom: 20px;
     }
 
     .equipe p {
@@ -175,10 +118,9 @@
         margin-bottom: 40px;
     }
 
-    .team .card img,
-    .team .card-2 img {
-        width: 180px;
-        height: 180px;
+    .team .card .persona img {
+        width: 150px;
+        height: 150px;
     }
 
     .team .card .name {
@@ -193,13 +135,11 @@
     /* contato */
     section .name-section {
         font-size: 30px;
-        margin-bottom: 20px;
     }
 
     section .description {
         margin-top: 0px;
         font-size: 14px;
-        margin-bottom: 40px;
     }
 
     .contact {
@@ -213,25 +153,16 @@
 
     form button {
         width: 27vw;
-        height: 10vh;
         font-size: 15px;
         letter-spacing: 2px;
     }
 
     /* rodape */
     footer .rodape {
-        background-color: #A9081C;
-        color: white;
-        font-family: 'Roboto';
-        display: inline-flex;
-        justify-content: space-around;
-        width: 100%;
         height: 80vh;
-        align-items: center;
     }
 
     footer .rodape div {
         width: 20vw;
-        height: 50%;
     }
 }
