--- a/CSS/360x640/responsive.css
+++ b/CSS/360x640/responsive.css
@@ -78,34 +78,25 @@
     }
 
     /*------------------------------------------------------------serviços------------------------------------------------------*/
-    .service .card {
-        width: 62vw;
-        height: 38vh;
-    }
-
-    .service .card .subtitle {
-        width: 100%;
-        height: 15%;
-        font-size: 20px;
-        font-weight: bold;
-        text-align: center;
-        margin-top: 20px;
-    }
-
-    .service .card .info {
-        width: 70%;
-        font-size: 14px;
-        align-self: center;
-        font-weight: 500;
-        margin-bottom: 20px;
-    }
-
     .service .name-section {
         font-size: 30px;
     }
 
     .service .description {
         font-size: 15px;
+    }
+
+    .service .card-container .card {
+        width: 70vw;
+        height: 70vw;
+    }
+
+    .service .card-container .card .subtitle {
+        font-size: 20px;
+    }
+
+    .service .card-container .card .info {
+        font-size: 14px;
     }
 
     /*----------------------------Equipe----------------------------*/
@@ -152,19 +143,12 @@
     }
 
     /*-----------------------------Footer-------------------*/
-    footer .rodape div {
-        margin-left: 20px;
-        margin-right: 20px;
-        width: 40vw;
-        height: 45%;
-    }
 
     .rodape .name {
         font-size: 25px;
     }
 
     .rodape .copy {
-        width: 80%;
         font-size: 10px;
     }
 
