--- a/CSS/origin.css
+++ b/CSS/origin.css
@@ -1,6 +1,7 @@
 *{
     margin: 0px;
     padding: 0px;
+    scroll-behavior: smooth;
 }
 
 @font-face {
@@ -38,13 +39,15 @@ header .dropdown {
 header .menu{
     padding: 40px;
     display: grid;
-    grid-template-columns: 20% 80%;
+    justify-content: center;
+    grid-template-columns: 10% 80%;
     max-height: 6vh;
 }
 
 header .menu h2{
     font-family: 'Segoe UI Bold', Fallback, sans-serif;
     text-transform: uppercase;
+    text-align: left;
     font-size: 36px;
     color: white;
     align-self: center;
@@ -59,6 +62,10 @@ header .menu a{
     text-decoration: none;
     cursor: pointer;
     margin-left: 50px;
+}
+
+header .menu a:hover{
+    text-shadow: 0px 5px 5px rgb(0, 0, 0);
 }
 
 header .main{
@@ -113,6 +120,9 @@ header .main button{
     text-transform: uppercase;
 }
 
+header .main button:hover{
+    background-color: #ffffff7a;
+}
 
 .principal {
     display: flex;
@@ -130,6 +140,10 @@ header .logo img {
     width: 20px;
 }
 
+header .logo img:hover{
+    background-color: #ffffff7a;
+}
+
 header .logo {
     display: flex;
     flex-direction: column;
@@ -143,7 +157,7 @@ header .logo {
 }
 
 header .logo a {
-    padding: 20px 0;
+    margin: 20px 0;
 }
 
 /*-----------------------------------Menu Dropdown--------------------------------------*/
@@ -225,6 +239,11 @@ label[for="checkbox-menu"] span:nth-child(3) {
     text-decoration: none;
     display: block;
     text-align: center;
+    border-radius: 10px;
+}
+
+.dropdown-child a:hover {
+    background-color: #ffffff25;
 }
 
 input[type=checkbox]:checked~#myDropdown {
@@ -278,18 +297,6 @@ input[type=checkbox]:checked~#myDropdown {
 
 /*-----------------------------------Serviços--------------------------------------*/
 
-.service{
-    display: inline-flex; 
-    flex-direction: column;
-    align-items: space-between;
-    width: 100%;
-    text-align: center;
-}
-
-.service div{
-    justify-content: center;
-}
-
 .service .name-section{
     margin-top: 8vh;
     font-family: 'Roboto', sans-serif;
@@ -303,42 +310,48 @@ input[type=checkbox]:checked~#myDropdown {
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
     text-align: center;
-    font-weight: 0;
     color: #111A21;
-    margin-bottom: 10px;
     text-transform: uppercase;
     margin-bottom: 2vh;
 }
 
-.service .card{ 
-    display: inline-flex;
+.service .card-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-left: 5%;
+    margin-right: 5%;
+    justify-content: center;
+}
+
+.service .card-container .card{ 
+    display: flex; 
     flex-direction: column;
-    width: 450px;
-    height: 45vh;
+    align-items: center;
+    justify-content: center;
+    width: 25vw;
+    height: 25vw;
     background-color:#fff;
     box-shadow: -1px 9px 9px rgb(0, 0, 0, 0.25);
-    margin: 20px;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin: 30px;
     border:solid 0.5px rgb(80, 80, 80, 0.1);
 }
 
-.service .card .subtitle{
-    width: 100%;
-    height: 20%;
+.service .card-container .card .subtitle{
     font-family: 'Roboto', sans-serif;
     font-size: 35px;
     font-weight: bold;
     text-align: center;
+    margin: 2vw;
 }
 
-.service .card .info{
-    padding-top: 20px;
-    width: 60%;
+.service .card-container .card .info{
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
-    align-self: center;
+    text-align: center;
     font-weight: 500; 
+    margin: 2vw;
+    margin-top: 0px;
 }
 
 /*------------------------------------------Equipe-----------------------------------------------------*/
@@ -368,7 +381,7 @@ input[type=checkbox]:checked~#myDropdown {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    max-width: 60vw;
+    max-width: 80vw;
 	margin: 0 auto;
 }
 
@@ -377,6 +390,7 @@ input[type=checkbox]:checked~#myDropdown {
     flex-direction: column;
     align-items: center;
     flex: 1;
+    padding: 2vw;
 }
 .team .card img {
     object-fit: cover;
@@ -388,8 +402,8 @@ input[type=checkbox]:checked~#myDropdown {
 .team .card .name {
     padding-top: 10px;
     text-align: center;    
-    font-family: 'Roboto', black;
-    font-style: bold;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
     width: 100%;
     font-size: 18px;
 }
@@ -438,7 +452,7 @@ form input {
     line-height: 20px;
     border: 2px; 
     background: #f2f2f2;
-    padding-bottom: 20px;
+    padding: 10px;
     font-size:16px;
     outline: none;
     border-radius: 4px;
@@ -480,30 +494,29 @@ footer .rodape{
     display: inline-flex;
     justify-content: space-around;
     width: 100%;
-    height: 30vh;
+    height: fit-content;
     align-items: center;    
 }
 
 footer .rodape div{
     text-align: left;
-    width: 15vw;
-    height: 50%;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
 }
+
 footer .rodape ul{
     display: flex; 
     flex-direction: column;
 }
+
 .rodape .name{
     text-transform: uppercase;
     font-size: 50px;
     font-weight: bold;
 }
 
-.rodape .copy{
-    margin-top: 10px;
-}
-.rodape li{
-    margin-top: 5px;
+.rodape .copy {
+    width: min-content;
 }
 
 .rodape li a{
@@ -522,7 +535,29 @@ footer ul{
     color: white;
 }
 
+/* BOTAO HOME */
 
+.btn {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 50px;
+    height: 50px;
+    background-color: #F2F2F2;
+    text-decoration: none;
+    border-radius: 50%;
+    opacity: 0.7;
+}
 
+.imgbotao {
+    width: 30px;
+    height: 30px;
+}
 
-
+.btn:hover{
+    background-color: #b6b6b6;
+    opacity: 1;
+}
