--- a/CSS/360x640/responsive.css
+++ b/CSS/360x640/responsive.css
@@ -93,10 +93,12 @@
 
     .service .card-container .card .subtitle {
         font-size: 20px;
+        font-size: 5.5vw;
     }
 
     .service .card-container .card .info {
         font-size: 14px;
+        font-size: 4.2vw;
     }
 
     /*----------------------------Equipe----------------------------*/
