--- a/CSS/640x360/responsive.css
+++ b/CSS/640x360/responsive.css
@@ -94,10 +94,12 @@
 
     .service .card-container .card .subtitle {
         font-size: 20px;
+        font-size: 3.4vw;
     }
 
     .service .card-container .card .info {
         font-size: 14px;
+        font-size: 2.2vw;
     }
 
     /* equipe */ 
