--- a/CSS/768x850/responsive.css
+++ b/CSS/768x850/responsive.css
@@ -69,10 +69,12 @@
     
     .service .card-container .card .subtitle{
         font-size: 28px;
+        font-size: 3.2vw;
     }
     
     .service .card-container .card .info{
         font-size: 16px;
+        font-size: 2.2vw;
     }
 
     /* contato */
