--- a/CSS/origin.css
+++ b/CSS/origin.css
@@ -340,6 +340,7 @@ input[type=checkbox]:checked~#myDropdown {
 .service .card-container .card .subtitle{
     font-family: 'Roboto', sans-serif;
     font-size: 35px;
+    font-size: 2.5vw;
     font-weight: bold;
     text-align: center;
     margin: 2vw;
@@ -348,6 +349,7 @@ input[type=checkbox]:checked~#myDropdown {
 .service .card-container .card .info{
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
+    font-size: 1.7vw;
     text-align: center;
     font-weight: 500; 
     margin: 2vw;
@@ -473,8 +475,8 @@ form label{
 
 form button{
     margin-top: 40px;
-    width: 22vw;
-    height: 10vh;
+    width: 15vw;
+    height: 4vw;
     background-color: #111A21;
     border-radius: 4px;
     color:white;
